SC-8904 add validation on create and modify

--- a/protodep.toml
+++ b/protodep.toml
@@ -6,4 +6,5 @@ revision = "v0.12"
 
 [[dependencies]]
 target = "github.com/coralogix/alerts-api-protobuf/"
-revision = "v0.20"
+branch = "SC-8904-alert-validation"
+protocol = "https"
