use labels from values

--- a/charts/cx-operator/templates/configMap.yaml
+++ b/charts/cx-operator/templates/configMap.yaml
@@ -60,4 +60,11 @@ data:
         {{- end }}
       ]
     }
+    
+    alertLabels = [
+      {{- .Values.config.alertLabels }}
+        {{ . | quote }},
+      {{- end }}  
+    ]
+
 
