--- a/charts/cx-operator/values.yaml
+++ b/charts/cx-operator/values.yaml
@@ -9,6 +9,9 @@ config:
     rulegroups: []
     coralogixLoggers: []
     alerts: []
+  # list of labels to add to alerts from alertset CRD, it matches label keys using regular expressions
+  alertLabels:
+    - CX_.* # add all labels starting with CX_
 image:
   pullPolicy: IfNotPresent
   repository: coralogixrepo
