fix configmap template

--- a/charts/cx-operator/templates/configMap.yaml
+++ b/charts/cx-operator/templates/configMap.yaml
@@ -62,7 +62,7 @@ data:
     }
     
     alertLabels = [
-      {{- .Values.config.alertLabels }}
+      {{- range .Values.config.alertLabels }}
         {{ . | quote }},
       {{- end }}  
     ]
