--- a/app/src/main/resources/shared.conf
+++ b/app/src/main/resources/shared.conf
@@ -19,6 +19,13 @@ grpc {
       queueSize = 8192
       headers: {}
     }
+
+    tags  {
+      deadline = 1 minute
+      parallelism = 4
+      queueSize = 8192
+      headers: {}
+    }
   }
 }
 
