--- a/app/src/main/resources/log4j2.yaml
+++ b/app/src/main/resources/log4j2.yaml
@@ -14,6 +14,8 @@ Configuration:
         level: info
       - name: io.netty
         level: info
+      - name: sttp.client3.logging.slf4j.Slf4jLoggingBackend
+        level: off
     root:
       level: info
       AppenderRef:
