add default value for tracing enabling

--- a/charts/cx-operator/templates/configMap.yaml
+++ b/charts/cx-operator/templates/configMap.yaml
@@ -66,5 +66,7 @@ data:
         {{ . | quote }},
       {{- end }}  
     ]
+    
+    enableTracing = {{ .Values.config.resources.enableTracing }}
 
 
